--- a/src/components/pages/LoginManagerPage.css
+++ b/src/components/pages/LoginManagerPage.css
@@ -1,107 +1,151 @@
-.contaner_manager_login{
-    margin-right: auto;
+.contaner_login_register{
+    max-width: 1520px;
+    display: flex;
+    flex-direction: column;
     margin-left: auto;
-    margin-top: 100px;
+    margin-right: auto;
+}
+
+.logo_register_login{
+    background: url("../cummon/Header/Logo.png");
+    height: 106px;
+    width: 226px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 88px;
+    margin-bottom: 54px;
+
+}
+
+.form_registration_login{
+    max-width: 400px;
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #9EDCFF;
+    border-radius: 15px;
+    box-shadow: 0px 8px 50px rgba(129, 135, 189, 0.25);
+
+    margin-left: auto;
+    margin-right: auto;
+
     display: flex;
     flex-direction: column;
 
-    max-width: 500px;
-    width: 100%;
-
-    border-radius: 20px;
-    border: 1px solid #9EDCFF;
-
-    padding: 20px;
+    padding: 10px;
 }
 
-.title_success{
+
+.title_form{
     font-family: 'Exo 2';
     font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    /* identical to box height */
-
-    color: #000000;
-}
-
-.title_login_manager{
-    font-family: 'Exo 2';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 24px;
-    /* identical to box height */
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    color: #000000;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.label_style_manager_login{
-    font-family: 'Exo 2';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 24px;
-    width: 350px;
-    /* identical to box height */
-
+    font-weight: 500;
+    font-size: 23px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 25px;
 }
 
-.input_style_manager_login{
-    width: 330px;
+
+.title_name_psw{
+    width: 280px;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+
+}
+
+.input_register_login{
+    width: 270px;
     height: 30px;
+
+    border-radius: 10px;
+    border: 2px solid #9EDCFF;
+
     margin-left: auto;
     margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    padding-left: 10px;
 
     font-family: 'Exo 2';
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
-    line-height: 24px;
 
-    background-color: #fff;
-    border: 2px solid #9EDCFF;
-    border-radius: 12px;
     outline: none;
-
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-left: 20px;
-
-    cursor: default;
 }
 
-.input_style_manager_login:focus{
-    border:2px solid #365CFF;
+.input_register_login:focus{
+    border: 2px solid #365CFF;
 }
 
-.login_manager_button{
-    width: 200px;
-    height: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-
-
+.form_button_login{
+    width: 150px;
+    height: 40px;
     background-color: #365CFF;
-    color: #FFFFFF;
-
-    cursor: pointer;
-    outline: none;
-    border:none;
     border-radius: 10px;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+
+    color: #FFFFFF;
+    text-decoration: none;
+
+    cursor: pointer;
+}
+
+.form_button_register{
+    width: 200px;
+    height: 40px;
+    background-color: #365CFF;
+    border-radius: 10px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+
+    color: #FFFFFF;
+    text-decoration: none;
+
+    cursor: pointer;
+}
+
+.subtitle_from{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 18px;
+    margin-bottom: 12px;
+
     font-family: 'Exo 2';
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
-    line-height: 24px;
+}
 
-
+.subtitle_from_link{
+    color:#365CFF;
+    font-weight: 600;
+    margin-left: 3px;
 }
