--- a/src/components/pages/LoginManagerPage.css
+++ b/src/components/pages/LoginManagerPage.css
@@ -149,3 +149,17 @@
     font-weight: 600;
     margin-left: 3px;
 }
+
+.success_login{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+
+    color: #365CFF;
+}
+
